syntax = "proto3";

package ifome;

message ItemCardapio {
    string nome = 1;
    double preco = 2;
}

message ListaDeItensDoCardapio {
    repeated ItemCardapio cardapio = 1;
}

message Posicao {
    int32 posicao = 1;
}

message Nome {
    string nome = 1;
}

message ItemPedido {
    int32 numero = 1;
    string nome = 2;
    double preco = 3;
    int32 quantidade = 4;
}

message Pedido {
    repeated ItemPedido pedido = 1;
}

message Vazia {}

service IFome {
    rpc ListarCardapio (Vazia) returns (ListaDeItensDoCardapio);
    rpc AdicionarItemCardapio (ItemCardapio) returns (ListaDeItensDoCardapio);
    rpc RemoverItemCardapio (Nome) returns (ListaDeItensDoCardapio);
    rpc AdicionarPedido (Pedido) returns (Posicao);
    rpc EntregarPedido (Pedido) returns (Posicao);
    rpc ConsultarPedido (Posicao) returns (Pedido);
    
}
